# resumate

./: .env.example  .gitignore  .gitleaks.toml  .prettierignore  .vercelignore  .wasm-build-hash  AGENTS.md  BUILD_REGRESSION_REPORT.md  CLAUDE.md  CODE_REVIEW_GUIDE.md  Cargo.toml  DOCUMENTATION_AUDIT.md  LICENSE  NAMING_CONVENTIONS.md  README.md  SECURITY.md  WARP.md  commitlint.config.mjs  eslint.config.mjs  justfile  knip.json  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  settings.json  tsconfig.json  vercel.json  vitest.config.ts
.claude/: CI_CD_IMPLEMENTATION_LOG.md  CI_CD_PRINCIPLES.md  CLAUDE.md  settings.json
.claude/agents/: linear-project-manager.md
.claude/skills/diff-compendium/: SKILL.md
.claude/skills/posthog-query/: SKILL.md  posthog-query.sh
.claude/skills/review-pr/: SKILL.md
.github/workflows/: CLAUDE.md  ci.yml  gist-deploy-trigger.yml  rust-type-validation.yml  wasm-rebuild.yml
.husky/: post-commit  pre-commit
app/: CLAUDE.md  globals.css  globals.css.backup  icon.tsx  layout.tsx  page.tsx  robots.ts
app/_sections/: AboutSection.tsx  ContactCardTurnstileModal.tsx  NaluCTA.tsx  RecruiterCTA.tsx  useContactCardFlow.ts
app/_sections/__tests__/: NaluCTA.test.tsx
app/api/contact-card/: route.ts
app/api/models/: route.ts
app/resume/: page.tsx
app/resume/view/: page.tsx
app/videos/: page.tsx
components/__tests__/: Button.test.tsx  YouTubeEmbed.test.tsx
components/data/: BulletCard.tsx  CompanySection.tsx  DataExplorer.tsx  ResumeDownload.tsx  SearchBar.tsx  TagFilter.tsx
components/data/__tests__/: DataExplorer.test.tsx  ResumeDownload.test.tsx  SearchBar.test.tsx  TagFilter.test.tsx
components/data/resume-download/: SelectionPanel.tsx  TurnstileModal.tsx  pipeline.ts  runDownloadPipeline.ts  types.ts  useDownloadExecution.ts  useDownloadHandlers.ts  useModelAvailability.ts
components/ui/: AIProgressIndicator.tsx  Badge.tsx  Button.tsx  ContactLinks.tsx  GlassPanel.tsx  IconBadge.tsx  Monogram.tsx  Navbar.tsx  ThemeToggle.tsx  YouTubeEmbed.tsx
contexts/: ThemeContext.tsx
crates/resume-core/: Cargo.toml
crates/resume-core/src/: lib.rs  scoring.rs  selector.rs
crates/resume-core/tests/: integration_test.rs  pdf_permutation.rs  pdf_validation.rs  roundtrip.rs
crates/resume-core/tests/common/: mod.rs
crates/resume-typst/: Cargo.toml  download-fonts.sh
crates/resume-typst/src/: compiler.rs  fonts.rs  lib.rs  template.rs
crates/resume-typst/tests/: typst_generation_test.rs
crates/resume-typst/tests/common/: mod.rs
crates/resume-wasm/: Cargo.toml
crates/resume-wasm/src/: lib.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: lib.rs
crates/shared-types/tests/: real_data.rs  roundtrip.rs  schema_validation.rs
data/: TEMPLATE_GUIDE.md  resume-data-template.json
doc-gen/: .gitignore  CLAUDE.md  Cargo.toml  README.md  TEST_REPORT.md  build-wasm.sh
doc-gen/crates/core/: Cargo.toml
doc-gen/crates/core/src/: lib.rs  scoring.rs  selector.rs  types.rs
doc-gen/crates/core/tests/: integration_test.rs  pdf_permutation.rs  pdf_permutation.rs.TODO  pdf_validation.rs  roundtrip.rs
doc-gen/crates/core/tests/common/: mod.rs
doc-gen/crates/docx/: Cargo.toml
doc-gen/crates/docx/src/: lib.rs
doc-gen/crates/pdf/: Cargo.toml
doc-gen/crates/pdf/examples/: generate_test.rs
doc-gen/crates/pdf/src/: generator.rs  layout.rs  lib.rs
doc-gen/crates/pdf/src/rendering/: experience.rs  footer.rs  header.rs  mod.rs
doc-gen/crates/pdf/tests/: pdf_content_test.rs  pdf_visual_test.rs
doc-gen/crates/pdf/tests/common/: mod.rs
doc-gen/crates/typst/: Cargo.toml
doc-gen/crates/typst/src/: compiler.rs  fonts.rs  lib.rs  template.rs
doc-gen/crates/typst/templates/: resume.typ
doc-gen/crates/typst/tests/: typst_generation_test.rs
doc-gen/crates/typst/tests/common/: mod.rs
doc-gen/crates/wasm/: Cargo.toml  build.rs
doc-gen/crates/wasm/src/: lib.rs
docs/: ANALYTICS_ARCHITECTURE.md  ARCHITECTURE.md  ARCHITECTURE_COMPLETE_MAP.mmd  ARCHITECTURE_DEEP_DIVE.md  BUILD_PIPELINE.md  CODEBASE_REVIEW.md  COMPREHENSIVE_DISCREPANCY_FINDINGS.md  CURRENT_PHASE.md  DATA_SCHEMA.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DISCREPANCY_RESOLUTION.md  IMMUTABILITY_GAPS.md  LINEAR_WORKFLOW.md  META_DOCUMENTATION.md  METRICS.md  PHASE_5_PLAN.md  POSTHOG_DASHBOARD_SPEC.md  REFACTOR_SUMMARY.md  STATUS.md  TESTING_INFRASTRUCTURE_ANALYSIS.md  TESTING_STRATEGY.md  TODOS.md  TSDOC_GAPS.md  TYPST_MIGRATION.md  WORKFLOWS.md
docs/superpowers/plans/: 2026-06-25-videos-page.md
docs/superpowers/specs/: 2026-05-25-headless-resume-cli-design.md  2026-06-25-videos-page-design.md
lib/: README.md  obfuscate.ts  posthog-client.tsx  posthog-events.ts  posthog-hooks.tsx  posthog-server.ts  rate-limit.ts  resume-metrics.ts  selection-diversity.ts  selection.ts  tags.ts  token-replay.ts  turnstile.ts  utils.ts  vcard.ts
lib/__tests__/: README.md  posthog-client.test.tsx  posthog-server.test.ts  rate-limit.test.ts  resume-metrics.test.ts  tags.test.ts  token-replay.test.ts  turnstile.test.ts  utils.test.ts  vcard.test.ts
lib/__tests__/fixtures/: resume-data.fixture.ts
lib/ai/: errors.ts  output-parser-hierarchy.ts  output-parser-salary.ts  output-parser.ts  selection.ts
lib/analytics/: errors.ts  event-properties-client.ts  event-properties-server.ts  events.ts  types-base.ts  types.ts
lib/types/: generated-resume.ts
public/: theme-init.js
public/wasm/: package.json  resume_wasm.d.ts  resume_wasm.js  resume_wasm_bg.wasm.d.ts
schemas/: resume.schema.json
scripts/: CLAUDE.md  build-wasm.sh  check-bundle-size.sh  check-wasm-fresh.sh  check-wasm.sh  clean-template.ts  cleanup-obsolete-files.sh  diff-compendium.py  fetch-gist-data.js  gen-ts-from-schemas.ts  gist-push.js  gist-view.js  test-bullet-selection-api.ts  time-pre-commit.sh  transform-resume-data.ts  transform-template.ts  update-integration-tests.sh  update-metrics-from-logs.sh  validate-compendium.mjs  verify-docs.sh
types/: reset.d.ts  resume-data.d.ts  resume.ts  wasm.d.ts
typst/fonts/: README.md
typst/templates/: resume.typ
(+42 files in other folders)
