[workspace]
resolver = "2"
members = [
    "crates/shared-types",
    "crates/resume-core",
    "crates/resume-typst",
    "crates/resume-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90.0"
authors = ["Oliver Gilbey"]
license = "MIT"
repository = "https://github.com/olliegilbey/resumate"

[workspace.dependencies]
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
schemars = "1.0"

# Typst PDF generation
typst = "0.12.0"
typst-pdf = "0.12.0"
typst-syntax = "0.12.0"
typst-utils = "0.12.0"
comemo = "0.4"
ecow = "0.2"

# WASM bindings
wasm-bindgen = "0.2.104"

# Date/time handling
chrono = { version = "0.4.42", features = ["serde"] }

# Error handling
thiserror = "2.0.17"

# Testing
proptest = "1.8.0"

# Internal workspace crates
shared-types = { path = "crates/shared-types" }
resume-core = { path = "crates/resume-core" }
resume-typst = { path = "crates/resume-typst" }

[profile.release]
# Optimize for size (WASM bundle)
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true
