[workspace]
resolver = "2"
members = [
    "crates/shared-types",
    "crates/resume-typst",
    "crates/resume-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90.0"
authors = ["Oliver Gilbey"]
license = "MIT"
repository = "https://github.com/olliegilbey/resumate"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"

# Typst PDF generation (0.12 - smaller bundle than 0.14)
typst = "0.12"
typst-pdf = "0.12"
typst-syntax = "0.12"
typst-utils = "0.12"
comemo = "0.4"
ecow = "0.2"

# WASM bindings
wasm-bindgen = "0.2"

# Date/time handling (wasmbind uses JS Date API in WASM)
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Error handling
thiserror = "2.0"

# Testing
proptest = "1.8"

# Internal workspace crates
shared-types = { path = "crates/shared-types" }
resume-typst = { path = "crates/resume-typst" }

[profile.release]
# Optimize for size (WASM bundle)
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true
