[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/pdf",
    "crates/docx",
    "crates/wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90.0"
authors = ["Oliver Gilbey"]
license = "MIT"
repository = "https://github.com/olliegilbey/resumate"

[workspace.dependencies]
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# PDF generation
pdf-writer = "0.14.0"

# DOCX generation
docx-rs = "0.4.18"

# WASM bindings
wasm-bindgen = "0.2.104"

# Date/time handling
chrono = { version = "0.4.42", features = ["serde"] }

# Error handling
thiserror = "2.0.17"

# Testing
proptest = "1.8.0"

# Internal workspace crates
docgen-core = { path = "crates/core" }
docgen-pdf = { path = "crates/pdf" }
docgen-docx = { path = "crates/docx" }

[profile.release]
# Optimize for size (WASM bundle)
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true
