[package]
name = "resume-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shared-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
resume-typst = { workspace = true }
chrono = { workspace = true }
pdf-extract = "0.10.0"
