[package]
name = "resume-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.wasm-pack.profile.release]
# Maximum size optimization
wasm-opt = [
    "-Oz",                              # Optimize for size
    "--enable-bulk-memory",             # Enable bulk memory operations
    "--enable-nontrapping-float-to-int", # Non-trapping float-to-int
    "--converge",                       # Run until no more optimizations
    "--vacuum",                         # Remove unused modules
    "--strip-debug",                    # Strip debug info
    "--strip-dwarf",                    # Strip DWARF sections
    "--strip-producers",                # Strip producer info
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
shared-types = { workspace = true }
resume-typst = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
proptest = { workspace = true }
