[package]
name = "shared-types"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Gilbey"]
license = "MIT"
repository = "https://github.com/olliegilbey/resumate"
description = "Shared type definitions for Resumate - single source of truth"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
schemars = "0.8"

[dev-dependencies]
regex = "1.10"

[[bin]]
name = "generate_schema"
path = "src/bin/generate_schema.rs"
