[package]
name = "docgen-docx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
docgen-core = { workspace = true }
serde = { workspace = true }
docx-rs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
