[package]
name = "docgen-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
docgen-core = { workspace = true }
serde = { workspace = true }
pdf-writer = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
