[package]
name = "docgen-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
docgen-core = { workspace = true }
docgen-pdf = { workspace = true }
docgen-docx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
